fix strikingly image on mobile

--- a/themes/vue/source/css/page.styl
+++ b/themes/vue/source/css/page.styl
@@ -264,7 +264,7 @@ $header-height = 40px
         padding 0
         bottom 0
         right 0
-        margin -20px 0 15px
+        margin 0 0 15px
         .carbon-wrap, .carbon-img, .carbon-text, .carbon-poweredby
             display inline-block
             vertical-align top
